--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon src/server.ts",
+    "start" : "node dist/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,8 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@types/express": "^5.0.0"
   }
 }
