--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -3,18 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon src/server.ts",
-    "start" : "node dist/server.ts"
+    "test": "jest",
+    "dev": "nodemon src/server.ts",
+    "start": "node dist/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
+    "@types/supertest": "^6.0.2",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
