--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1"
   }
 }
