--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -1,34 +1,34 @@
 {
   "name": "catalog_service",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --no-cache --coverage --all --runInBand",
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "@faker-js/faker": "^8.4.0",
+    "@types/express": "^4.17.21",
+    "express": "^4.18.2"
+  },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.1",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.9",
     "@types/rosie": "^0.0.45",
     "@types/supertest": "^6.0.2",
-    "express": "^4.21.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
-    "rosie": "^2.1.1",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@faker-js/faker": "^9.2.0",
-    "@types/express": "^5.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1"
+    "class-validator": "^0.14.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "rosie": "^2.1.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
