--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -25,6 +25,7 @@
     "class-validator": "^0.14.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
+    "prisma": "^5.22.0",
     "rosie": "^2.1.1",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
