--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@prisma/client": "^5.22.0",
     "@types/express": "^4.17.21",
     "express": "^4.18.2"
   },
