--- a/order_service/package.json
+++ b/order_service/package.json
@@ -5,27 +5,38 @@
   "scripts": {
     "dev": "nodemon src/server.ts",
     "start": "node dist/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "tsx ./migration.ts",
+    "db:studio": "drizzle-kit studio --port 6000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sinclair/typebox": "^0.34.8",
+    "ajv": "^8.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.4",
     "express": "^4.21.1",
-    "express-rate-limiter": "^1.3.1"
+    "express-rate-limiter": "^1.3.1",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.3",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.28.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
